# RustyChat

./: .gitignore  README.md
client/: Cargo.toml
client/src/: client.rs  main.rs
server/: Cargo.toml  sqlite.db  sqlite.db-shm  sqlite.db-wal
server/src/: database.rs  handlers.rs  main.rs
shared_utils/: Cargo.toml
shared_utils/src/: lib.rs
