[package]
name = "rusty-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
shared_utils = {path="../shared_utils"}
iced = { version = "0.9", features = ["tokio", "image"] }
iced_futures = { version = "0.6.0", features = ["tokio"]}
iced_native = "0.10.3"
iced_aw = { version = "0.5", features = ["icons"] }
native-dialog = "0.6.3"
once_cell = "1.15"