[package]
name = "chat-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
shared_utils = {path="../shared_utils"}
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
bcrypt = "0.14.0"